--- a/quickproject-service/pom.xml
+++ b/quickproject-service/pom.xml
@@ -13,4 +13,17 @@
         <artifactId>quickproject</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <properties>
+        <elasticsearch.version>6.2.4</elasticsearch.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>${elasticsearch.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
